openapi adapted
